--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,16 @@ body {
     text-align: center;
     border-bottom: 2px solid #b3e0f2;
 }
+
+.header h1{
+    font-size: 2.5rem;
+    margin-bottom: 10px;
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+}
